deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cct
  namespace: devs-beta
spec:
  selector:
    app: api-cct
  ports:
    - name: "80"
      port: 80
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cct
  namespace: devs-beta
  labels:
    app: api-cct
spec:
  selector:
    matchLabels:
      app: api-cct
  template:
    metadata:
      labels:
        app: api-cct
    spec:
      containers:
      - name: api-cct
        image: gcr.io/rj-smtr/api-cct
        ports:
        - containerPort: 3000
        # imagePullPolicy: Always
      serviceAccountName: default

---

# Web app Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-cct
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.cluster.mobilidade.dev
      secretName: api-cct-tls
  rules:
    - host: api.cluster.mobilidade.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-cct
                port:
                  number: 80
